--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 <body>
     <h1>Lista de Compras</h1>
 
-    <p>Digite um produto : <input type="text" name="prod" id="prod"> <button type="button" id="btnAdicionar"
+    <p>Digite um produto : <input type="text" name="prod" id="prod" placeholder="Digite um Produto ..."> <button type="button" id="btnAdicionar"
             name="btnAdicionar">Adicionar</button></p>
 
     <ul id="lista">
 
     </ul>
 
+
+    <footer>
+        <p>Total : </p>
+    </footer>
 </body>
 
 
