--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -6,29 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testes</title>
-    <link rel="stylesheet" href="./css/style.css">
-
-
 </head>
 
 <body>
     <h1>Lista de Compras</h1>
 
-    <p>Digite um produto : <input type="text" name="prod" id="prod" placeholder="Digite um Produto ..."> <button type="button" id="btnAdicionar"
-            name="btnAdicionar">Adicionar</button></p>
+    <p>Digite um produto : <input type="text" name="prod" id="prod" placeholder="Digite um Produto ..."> <button
+            type="button" id="btnAdicionar" name="btnAdicionar">Adicionar</button></p>
 
-    <ul id="lista">
-
-    </ul>
-
+    <ul id="lista"></ul>
 
     <footer>
-        <p>Total : </p>
+        <p id="ptotal"> Total : 0 </p> <button onclick="calcularTotal()">Calcular</button>
     </footer>
 </body>
 
-
-<script src="./js/script.js"></script>
 <script src="./js/adicionar.js"></script>
+<script src="./js/calcularTotal.js"></script>
 
 </html>
