Implemented the function of deleting a product, calculating the dynamic total, without the need to click the button.Code improvement when inserting attributes when creating a product in the list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul id="lista"></ul>
 
     <footer>
-        <p id="ptotal"> Total : 0 </p> <button onclick="calcularTotal()">Calcular</button>
+        <p id="ptotal"> Total : 0 </p>
     </footer>
 </body>
 
