--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <ul id="lista"></ul>
 
     <footer>
-        <p id="ptotal"> Total : 0 </p>
+        <p id="ptotal"> Total : 0 </p> <button id="salvar">Salvar</button>
+
+        <input type="file" id="arquivoInput" onchange="carregarLista()" style="display:none;">
+        <button onclick="document.getElementById('arquivoInput').click()">Carregar</button>
     </footer>
 </body>
 
 <script src="./js/adicionar.js"></script>
 <script src="./js/calcularTotal.js"></script>
+<script src="./js/salvar.js"></script>
+<script src="./js/carregar.js"></script>
 
 </html>
