--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
         <input type="file" id="arquivoInput" onchange="carregarLista()" style="display:none;">
         <button onclick="document.getElementById('arquivoInput').click()">Carregar</button>
+
+        <button onclick="limparLista()">Limpar</button>
     </footer>
 </body>
 
@@ -27,5 +29,6 @@
 <script src="./js/calcularTotal.js"></script>
 <script src="./js/salvar.js"></script>
 <script src="./js/carregar.js"></script>
+<script src="./js/limpar.js"></script>
 
 </html>
