--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/default_style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Lista de Compras</title>
 </head>
 
 <body>
     <h1>Lista de Compras</h1>
 
-    <p>Digite um produto : <input type="text" name="prod" id="prod" placeholder="Digite um Produto ..."> <button
+    <p><input type="text" name="prod" id="prod" placeholder="Digite um Produto ..."> <button
             type="button" id="btnAdicionar" name="btnAdicionar">Adicionar</button>
         <button id="salvar">Salvar</button>
 
