Adjusted placeholder responsiveness and horizontal pinning.

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 <script src="./js/salvar.js"></script>
 <script src="./js/carregar.js"></script>
 <script src="./js/limpar.js"></script>
+<script src="./js/responsive.js"></script>
 
 </html>
